--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
 
     <nav class="menu">
         <ul>
-            <li>1</li>
-            <li>1</li>
-            <li>1</li>
-            <li>1</li>
+            <li>Option 1</li>
+            <li>Option 2</li>
+            <li>Option 3</li>
+            <li>Option 4</li>
         </ul>
     </nav>
 
-    <section class="main-section" class="section">
-        <article>
+    <section id="main-section" class="section">
+        <article class="card-article">
             <h2>Article 1</h2>
             <p>Content article 1</p>
         </article>
-        <article>
+        <article class="card-article">
             <h2>Article 2</h2>
             <p>Content article 2</p>
         </article>
-        <article>
+        <article class="card-article">
             <h2>Article 3</h2>
             <p>Content article 3</p>
         </article>
-        <article>
+        <article class="card-article">
             <h2>Article 4</h2>
             <p>Content article 4</p>
         </article>
     </section>
 
-    <footer>
+    <footer class="footer">
         <p>&copy; 2025 My website</p>
     </footer>
 </body>
