--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header id="main-header" class="header">
-        <h1>Titulo</h1>
+        <h1>Bienvenido</h1>
     </header>
 
     <nav class="menu">
