--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
 
 
+    <div id="main-container">
         <nav id="main-menu" class="menu">
             <ul>
                 <li>Option 1</li>
@@ -25,72 +26,80 @@
             </ul>
         </nav>
 
-    <div id="section-container">
-        <section id="main-section" class="section">
-            <h1>Section 1</h1>
-            <article class="card-article">
-                <h2>Article 1</h2>
-                <p>Content article 1</p>
-            </article>
-            <article class="card-article">
-                <h2>Article 2</h2>
-                <p>Content article 2</p>
-            </article>
-            <article class="card-article">
-                <h2>Article 3</h2>
-                <p>Content article 3</p>
-            </article>
-            <article class="card-article">
-                <h2>Article 4</h2>
-                <p>Content article 4</p>
-            </article>
-        </section>
+        <div id="section-container">
+            <section id="main-section" class="section">
+                <h1>Section 1</h1>
+                <article class="card-article">
+                    <h2>Article 1</h2>
+                    <p>Content article 1</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 2</h2>
+                    <p>Content article 2</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 3</h2>
+                    <p>Content article 3</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 4</h2>
+                    <p>Content article 4</p>
+                </article>
+            </section>
 
-        <section id="second-section" class="section">
-            <h1>Section 2</h1>
-            <article class="card-article">
-                <h2>Article 1</h2>
-                <p>Content article 1</p>
-            </article>
-            <article class="card-article">
-                <h2>Article 2</h2>
-                <p>Content article 2</p>
-            </article>
-            <article class="card-article">
-                <h2>Article 3</h2>
-                <p>Content article 3</p>
-            </article>
-            <article class="card-article">
-                <h2>Article 4</h2>
-                <p>Content article 4</p>
-            </article>
-        </section>
+            <section id="second-section" class="section">
+                <h1>Section 2</h1>
+                <article class="card-article">
+                    <h2>Article 1</h2>
+                    <p>Content article 1</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 2</h2>
+                    <p>Content article 2</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 3</h2>
+                    <p>Content article 3</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 4</h2>
+                    <p>Content article 4</p>
+                </article>
+            </section>
 
-        <section id="thirth-section" class="section">
-            <h1>Section 3</h1>
-            <article class="card-article">
-                <h2>Article 1</h2>
-                <p>Content article 1</p>
-            </article>
-            <article class="card-article">
-                <h2>Article 2</h2>
-                <p>Content article 2</p>
-            </article>
-            <article class="card-article">
-                <h2>Article 3</h2>
-                <p>Content article 3</p>
-            </article>
-            <article class="card-article">
-                <h2>Article 4</h2>
-                <p>Content article 4</p>
-            </article>
-        </section>
+            <section id="thirth-section" class="section">
+                <h1>Section 3</h1>
+                <article class="card-article">
+                    <h2>Article 1</h2>
+                    <p>Content article 1</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 2</h2>
+                    <p>Content article 2</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 3</h2>
+                    <p>Content article 3</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 4</h2>
+                    <p>Content article 4</p>
+                </article>
+            </section>
+        </div>
+
     </div>
 
 
     <footer class="footer">
         <p>&copy; 2025 My website</p>
-    </footer>
+    </footer>    
 </body>
 
 </html>
+
+<!--
+
+
+
+-->
