--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./js/script.js"></script>
 </head>
 
-<body>
+<body id="body">
     <header id="main-header" class="header">
         <h1>Bienvenido</h1>
     </header>
@@ -93,7 +93,9 @@
 
     <footer class="footer">
         <p>&copy; 2025 My website</p>
-    </footer>    
+    </footer>
+
+    <script src="https://cdn.counter.dev/script.js" data-id="0fc0c2cd-15ff-4a20-9af8-517675cfaf17" data-utcoffset="-3"></script>
 </body>
 
 </html>
