Agregando contenido basico de presentacion al header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 
 <body id="body">
     <header id="main-header" class="header">
-        <h1>Bienvenido</h1>
+        <div id="title">
+            <h1>Matías Bartoluche</h1>
+            <h2>Ingeniero en software</h2>
+            <div id="contact-buttons">
+                <buuton>Button</buuton>
+            </div>
+        </div>
+        <div id="image-header">
+            <img src="./img/portada.png">
+        </div>
     </header>
 
 
