Agregando botones de redes sociales y aplicando estilos

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 <body id="body">
     <header id="main-header" class="header">
         <div id="title">
-            <h1>Matías Bartoluche</h1>
-            <h2>Ingeniero en software</h2>
+            <h1>Titulo</h1>
+            <h2>Subtitulo</h2>
             <div id="contact-buttons">
-                <buuton>Button</buuton>
+                <input type="image" src="./img/linkedin.png" class="social-media-button light-button"></input>
+                <input type="image" src="./img/gmail.png" class="social-media-button light-button"></input>
+                <input type="image" src="./img/github.png" class="social-media-button light-button"></input>
+                <button id="cv" class="custom-button light-button">Descargar cv</button>
             </div>
         </div>
         <div id="image-header">
