--- a/index.html
+++ b/index.html
@@ -32,15 +32,26 @@
     <div id="main-container">
         <nav id="main-menu" class="menu">
             <ul>
-                <li>Option 1</li>
-                <li>Option 2</li>
-                <li>Option 3</li>
-                <li>Option 4</li>
+                <li>
+                    <a href="#first-section">Option 1</a>
+                </li>
+
+                <li>
+                    <a href="#second-section">Option 2</a>
+                </li>
+
+                <li>
+                    <a href="#thirth-section">Option 3</a>
+                </li>
+                
+                <li>
+                    <a href="#fourth-section">Option 4</a>
+                </li>
             </ul>
         </nav>
 
         <div id="section-container">
-            <section id="main-section" class="section">
+            <section id="first-section" class="section">
                 <h1>Section 1</h1>
                 <article class="card-article">
                     <h2>Article 1</h2>
@@ -99,6 +110,26 @@
                     <p>Content article 4</p>
                 </article>
             </section>
+
+           <section id="fourth-section" class="section">
+                <h1>Section 4</h1>
+                <article class="card-article">
+                    <h2>Article 1</h2>
+                    <p>Content article 1</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 2</h2>
+                    <p>Content article 2</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 3</h2>
+                    <p>Content article 3</p>
+                </article>
+                <article class="card-article">
+                    <h2>Article 4</h2>
+                    <p>Content article 4</p>
+                </article>
+            </section>            
         </div>
 
     </div>
