--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
         <div id="section-container">
             <section id="first-section" class="section">
                 <h1>Section 1</h1>
-                <article class="card-article light-article">
+                <article class="card-article glow-element">
                     <h2>Article 1</h2>
                     <p>Content article 1</p>
                 </article>
-                <article class="card-article light-article">
+                <article class="card-article glow-element">
                     <h2>Article 2</h2>
                     <p>Content article 2</p>
                 </article>
-                <article class="card-article light-article">
+                <article class="card-article glow-element">
                     <h2>Article 3</h2>
                     <p>Content article 3</p>
                 </article>
-                <article class="card-article light-article">
+                <article class="card-article glow-element">
                     <h2>Article 4</h2>
                     <p>Content article 4</p>
                 </article>
@@ -73,19 +73,19 @@
 
             <section id="second-section" class="section">
                 <h1>Section 2</h1>
-                <article class="card-article">
+                <article class="card-article glow-element">
                     <h2>Article 1</h2>
                     <p>Content article 1</p>
                 </article>
-                <article class="card-article">
+                <article class="card-article glow-element">
                     <h2>Article 2</h2>
                     <p>Content article 2</p>
                 </article>
-                <article class="card-article">
+                <article class="card-article glow-element">
                     <h2>Article 3</h2>
                     <p>Content article 3</p>
                 </article>
-                <article class="card-article">
+                <article class="card-article glow-element">
                     <h2>Article 4</h2>
                     <p>Content article 4</p>
                 </article>
@@ -93,19 +93,19 @@
 
             <section id="thirth-section" class="section">
                 <h1>Section 3</h1>
-                <article class="card-article">
+                <article class="card-article glow-element">
                     <h2>Article 1</h2>
                     <p>Content article 1</p>
                 </article>
-                <article class="card-article">
+                <article class="card-article glow-element">
                     <h2>Article 2</h2>
                     <p>Content article 2</p>
                 </article>
-                <article class="card-article">
+                <article class="card-article glow-element">
                     <h2>Article 3</h2>
                     <p>Content article 3</p>
                 </article>
-                <article class="card-article">
+                <article class="card-article glow-element">
                     <h2>Article 4</h2>
                     <p>Content article 4</p>
                 </article>
@@ -113,19 +113,19 @@
 
            <section id="fourth-section" class="section">
                 <h1>Section 4</h1>
-                <article class="card-article">
+                <article class="card-proyect glow-element">
                     <h2>Article 1</h2>
                     <p>Content article 1</p>
                 </article>
-                <article class="card-article">
+                <article class="card-proyect glow-element">
                     <h2>Article 2</h2>
                     <p>Content article 2</p>
                 </article>
-                <article class="card-article">
+                <article class="card-proyect glow-element">
                     <h2>Article 3</h2>
                     <p>Content article 3</p>
                 </article>
-                <article class="card-article">
+                <article class="card-proyect glow-element">
                     <h2>Article 4</h2>
                     <p>Content article 4</p>
                 </article>
