Aplicando estructura y estilos a los articulos para proyectos

--- a/index.html
+++ b/index.html
@@ -113,21 +113,37 @@
 
            <section id="fourth-section" class="section">
                 <h1>Section 4</h1>
+
                 <article class="card-proyect glow-element">
-                    <h2>Article 1</h2>
-                    <p>Content article 1</p>
+                    <div class="img-content">
+                        <img src="./img/default-proyect.jpg">
+                    </div>
+                    <h2>proyect 1</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus praesentium vel amet dolore quidem veritatis perspiciatis vitae minus, quaerat excepturi sequi vero nihil aspernatur, accusamus alias itaque sapiente minima error.</p>
                 </article>
+
                 <article class="card-proyect glow-element">
-                    <h2>Article 2</h2>
-                    <p>Content article 2</p>
+                    <div class="img-content">
+                        <img src="./img/default-proyect.jpg">
+                    </div>
+                    <h2>proyect 2</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, autem quo magni eveniet nobis consequuntur similique, omnis necessitatibus sapiente delectus exercitationem laudantium id iste neque perferendis natus incidunt eum ipsum.</p>
                 </article>
+
                 <article class="card-proyect glow-element">
-                    <h2>Article 3</h2>
-                    <p>Content article 3</p>
+                    <div class="img-content">
+                        <img src="./img/default-proyect.jpg">
+                    </div>
+                    <h2>proyect 3</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente eius, repellendus unde nemo quia tenetur soluta libero illum ea officia! Consequatur nobis velit eius, eaque nam recusandae voluptatem esse tenetur.</p>
                 </article>
+
                 <article class="card-proyect glow-element">
-                    <h2>Article 4</h2>
-                    <p>Content article 4</p>
+                    <div class="img-content">
+                        <img src="./img/default-proyect.jpg">
+                    </div>
+                    <h2>proyect 4</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium totam architecto sint, placeat quis ullam atque cumque fuga molestiae dolores culpa at distinctio veritatis beatae sed earum asperiores quae recusandae?</p>
                 </article>
             </section>            
         </div>
