--- a/index.html
+++ b/index.html
@@ -30,28 +30,20 @@
 
 
     <div id="main-container">
+        <!-- menu vertical -->
         <nav id="main-menu" class="menu">
             <ul>
-                <li>
-                    <a href="#first-section">Option 1</a>
-                </li>
-
-                <li>
-                    <a href="#second-section">Option 2</a>
-                </li>
-
-                <li>
-                    <a href="#thirth-section">Option 3</a>
-                </li>
-                
-                <li>
-                    <a href="#fourth-section">Option 4</a>
-                </li>
+                <!-- cada link hace un desplazamiento interno a su seccion correspondiente -->
+                <li> <a href="#first-section">Option 1</a> </li>
+                <li> <a href="#second-section">Option 2</a> </li>
+                <li> <a href="#thirth-section">Option 3</a> </li>
+                <li> <a href="#fourth-section">Option 4</a> </li>
             </ul>
         </nav>
 
         <div id="section-container">
             <section id="first-section" class="section">
+
                 <h1>Section 1</h1>
                 <article class="card-article glow-element">
                     <h2>Article 1</h2>
@@ -111,9 +103,10 @@
                 </article>
             </section>
 
-           <section id="fourth-section" class="section">
+            <!-- Seccion de proyectos personales -->
+            <section id="fourth-section" class="section">
                 <h1>Section 4</h1>
-
+                <!-- Articulo de proyecto -->
                 <article class="card-proyect glow-element">
                     <div class="img-content">
                         <img src="./img/default-proyect.jpg">
@@ -136,9 +129,9 @@
                             <p>Github</p>
                         </a>
                     </div>
-
                 </article>
 
+                <!-- Articulo de proyecto -->
                 <article class="card-proyect glow-element">
                     <div class="img-content">
                         <img src="./img/default-proyect.jpg">
@@ -161,9 +154,9 @@
                             <p>Github</p>
                         </a>
                     </div>
-
                 </article>
 
+                <!-- Articulo de proyecto -->
                 <article class="card-proyect glow-element">
                     <div class="img-content">
                         <img src="./img/default-proyect.jpg">
@@ -188,6 +181,7 @@
                     </div>
                 </article>
 
+                <!-- Articulo de proyecto -->
                 <article class="card-proyect glow-element">
                     <div class="img-content">
                         <img src="./img/default-proyect.jpg">
@@ -210,7 +204,6 @@
                             <p>Github</p>
                         </a>
                     </div>
-
                 </article>
             </section>            
         </div>
