--- a/index.html
+++ b/index.html
@@ -65,21 +65,9 @@
 
             <section id="second-section" class="section">
                 <h1>Section 2</h1>
-                <article class="card-article glow-element">
-                    <h2>Article 1</h2>
-                    <p>Content article 1</p>
-                </article>
-                <article class="card-article glow-element">
-                    <h2>Article 2</h2>
-                    <p>Content article 2</p>
-                </article>
-                <article class="card-article glow-element">
-                    <h2>Article 3</h2>
-                    <p>Content article 3</p>
-                </article>
-                <article class="card-article glow-element">
-                    <h2>Article 4</h2>
-                    <p>Content article 4</p>
+                <article class="skill-article glow-red">
+                    <img src="./img/java.png">
+                    <p>Java</p>
                 </article>
             </section>
 
