Cambiando los botondes de redes sociales por etiquetas <a>

--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
             <h1>Titulo</h1>
             <h2>Subtitulo</h2>
             <div id="contact-buttons">
-                <input type="image" src="./img/linkedin.png" class="social-media-button light-button"></input>
-                <input type="image" src="./img/gmail.png" class="social-media-button light-button"></input>
-                <input type="image" src="./img/github.png" class="social-media-button light-button"></input>
+                <a href="#" class="social-media-button light-button">
+                    <img src="./img/linkedin.png">
+                </a>
+
+                <a href="#" class="social-media-button light-button">
+                    <img src="./img/gmail.png">
+                </a>
+
+                <a href="#" class="social-media-button light-button"> 
+                    <img src="./img/github.png">
+                </a>
                 <button id="cv" class="custom-button light-button">Descargar cv</button>
             </div>
         </div>
