Creando la clase glow-circle que emite un borde animado con 360 grados de rotacion

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
             <section id="first-section" class="section">
 
                 <h1>Section 1</h1>
-                <article class="card-article glow-element">
+                <article class="card-article glow-circle glow-orange">
                     <h2>Article 1</h2>
                     <p>Content article 1</p>
                 </article>
-                <article class="card-article glow-element">
+                <article class="card-article glow-circle glow-orange">
                     <h2>Article 2</h2>
                     <p>Content article 2</p>
                 </article>
-                <article class="card-article glow-element">
+                <article class="card-article glow-circle glow-orange">
                     <h2>Article 3</h2>
                     <p>Content article 3</p>
                 </article>
-                <article class="card-article glow-element">
+                <article class="card-article glow-circle glow-orange">
                     <h2>Article 4</h2>
                     <p>Content article 4</p>
                 </article>
@@ -73,7 +73,7 @@
 
             <section id="second-section" class="section">
                 <h1>Section 2</h1>
-                <article class="skill-article glow-red">
+                <article class="skill-article glow-circle glow-red">
                     <img src="./img/java.png">
                     <p>Java</p>
                 </article>
@@ -81,19 +81,19 @@
 
             <section id="thirth-section" class="section">
                 <h1>Section 3</h1>
-                <article class="card-article glow-element">
+                <article class="card-article glow-circle glow-sky">
                     <h2>Article 1</h2>
                     <p>Content article 1</p>
                 </article>
-                <article class="card-article glow-element">
+                <article class="card-article glow-circle glow-sky">
                     <h2>Article 2</h2>
                     <p>Content article 2</p>
                 </article>
-                <article class="card-article glow-element">
+                <article class="card-article glow-circle glow-sky">
                     <h2>Article 3</h2>
                     <p>Content article 3</p>
                 </article>
-                <article class="card-article glow-element">
+                <article class="card-article glow-circle glow-sky">
                     <h2>Article 4</h2>
                     <p>Content article 4</p>
                 </article>
@@ -103,7 +103,7 @@
             <section id="fourth-section" class="section">
                 <h1>Section 4</h1>
                 <!-- Articulo de proyecto -->
-                <article class="card-proyect glow-element">
+                <article class="card-proyect glow-circle glow-rainbow">
                     <div class="img-content">
                         <img src="./img/default-proyect.jpg">
                     </div>
@@ -128,7 +128,7 @@
                 </article>
 
                 <!-- Articulo de proyecto -->
-                <article class="card-proyect glow-element">
+                <article class="card-proyect glow-circle glow-rainbow">
                     <div class="img-content">
                         <img src="./img/default-proyect.jpg">
                     </div>
@@ -153,7 +153,7 @@
                 </article>
 
                 <!-- Articulo de proyecto -->
-                <article class="card-proyect glow-element">
+                <article class="card-proyect glow-circle glow-rainbow">
                     <div class="img-content">
                         <img src="./img/default-proyect.jpg">
                     </div>
@@ -178,7 +178,7 @@
                 </article>
 
                 <!-- Articulo de proyecto -->
-                <article class="card-proyect glow-element">
+                <article class="card-proyect glow-circle glow-rainbow">
                     <div class="img-content">
                         <img src="./img/default-proyect.jpg">
                     </div>
