Reestructurando el header con menu horizontal integrado

--- a/index.html
+++ b/index.html
@@ -13,34 +13,33 @@
 
 <body id="body">
     <header id="main-header" class="header">
-        <div id="title">
-            <h1>Titulo</h1>
-            <h2>Subtitulo</h2>
+        <div class="header-container">
+            <div id="title">
+                <h1>Titulo</h1>
+                <h2>Subtitulo</h2>
+            </div>
+
+            <div id="contact-buttons">
+                <a href="#" class="social-media-button light-button">
+                    <img src="./img/linkedin.png">
+                </a>
+
+                <a href="#" class="social-media-button light-button">
+                    <img src="./img/gmail.png">
+                </a>
+
+                <a href="#" class="social-media-button light-button"> 
+                    <img src="./img/github.png">
+                </a>
+                <button id="cv" class="custom-button light-button">Descargar cv</button>
+            </div>
+
+            <div id="image-header">
+                <img src="./img/portada.png">
+            </div>
         </div>
 
-        <div id="contact-buttons">
-            <a href="#" class="social-media-button light-button">
-                <img src="./img/linkedin.png">
-            </a>
-
-            <a href="#" class="social-media-button light-button">
-                <img src="./img/gmail.png">
-            </a>
-
-            <a href="#" class="social-media-button light-button"> 
-                <img src="./img/github.png">
-            </a>
-            <button id="cv" class="custom-button light-button">Descargar cv</button>
-        </div>
-
-        <div id="image-header">
-            <img src="./img/portada.png">
-        </div>
-    </header>
-
-
-    <div id="main-container">
-        <!-- menu vertical -->
+         <!--menu vertical -->
         <nav id="main-menu" class="menu">
             <ul>
                 <!-- cada link hace un desplazamiento interno a su seccion correspondiente -->
@@ -50,6 +49,9 @@
                 <li> <a href="#fourth-section">Option 4</a> </li>
             </ul>
         </nav>
+    </header>
+
+    <div id="main-container">
 
         <div id="section-container">
             <section id="first-section" class="section">
