Corrigiendo errores de scroll y activaciones de animaciones

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <nav id="main-menu" class="menu">
             <ul>
                 <!-- cada link hace un desplazamiento interno a su seccion correspondiente -->
-                <li> <a href="#first-section">Option 1</a> </li>
+                <li> <a href="#first-section" id="option1">Option 1</a> </li>
                 <li> <a href="#second-section">Option 2</a> </li>
                 <li> <a href="#thirth-section">Option 3</a> </li>
                 <li> <a href="#fourth-section">Option 4</a> </li>
