Arreglando layout del header

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#" class="social-media-button light-button"> 
                     <img src="./img/github.png">
                 </a>
-                <button id="cv" class="custom-button light-button">Descargar cv</button>
+                <button id="cv" class="custom-button">Descargar cv</button>
             </div>
 
             <div id="image-header">
