Agregando estilos y estructura a la clase card-article

--- a/index.html
+++ b/index.html
@@ -59,19 +59,23 @@
                 <h1>Section 1</h1>
                 <article class="card-article glow-circle glow-orange">
                     <h2>Article 1</h2>
-                    <p>Content article 1</p>
+                    <img src="./img/card.png">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sequi nam odio, labore inventore animi neque asperiores omnis rem. Reiciendis expedita quisquam non laboriosam iure obcaecati doloribus facilis nisi nesciunt!</p>
                 </article>
                 <article class="card-article glow-circle glow-orange">
                     <h2>Article 2</h2>
-                    <p>Content article 2</p>
+                    <img src="./img/card.png">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem qui alias, id quae autem aliquam adipisci quaerat possimus voluptates praesentium veritatis nihil vero cum perspiciatis culpa nostrum quos fuga. Excepturi.</p>
                 </article>
                 <article class="card-article glow-circle glow-orange">
                     <h2>Article 3</h2>
-                    <p>Content article 3</p>
+                    <img src="./img/card.png">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti necessitatibus debitis odit praesentium? Adipisci beatae neque sunt rerum placeat voluptate labore saepe molestias! Tenetur placeat doloremque at facere! Aliquid, maiores!</p>
                 </article>
                 <article class="card-article glow-circle glow-orange">
                     <h2>Article 4</h2>
-                    <p>Content article 4</p>
+                    <img src="./img/card.png">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor labore autem ratione sapiente soluta, non nihil aspernatur ullam quod ducimus fuga, voluptatum, iusto possimus obcaecati repellendus beatae! Ratione, nam minima.</p>
                 </article>
             </section>
 
@@ -87,19 +91,23 @@
                 <h1>Section 3</h1>
                 <article class="card-article glow-circle glow-sky">
                     <h2>Article 1</h2>
-                    <p>Content article 1</p>
+                    <img src="./img/card.png">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, harum laboriosam accusamus, adipisci molestias rem libero facilis illum ipsa minus veritatis magnam, tempore officiis eius. Nemo labore incidunt commodi sunt.</p>
                 </article>
                 <article class="card-article glow-circle glow-sky">
                     <h2>Article 2</h2>
-                    <p>Content article 2</p>
+                    <img src="./img/card.png">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi molestias est illo facilis fugiat eos ducimus iusto? Ipsum, debitis quasi. Labore maiores delectus veritatis similique doloremque accusamus corporis cupiditate aspernatur.</p>
                 </article>
                 <article class="card-article glow-circle glow-sky">
                     <h2>Article 3</h2>
-                    <p>Content article 3</p>
+                    <img src="./img/card.png">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi deserunt consequatur, veniam corporis voluptates nesciunt provident assumenda asperiores nemo. Eum quos accusamus error asperiores at beatae eaque soluta minima harum.</p>
                 </article>
                 <article class="card-article glow-circle glow-sky">
                     <h2>Article 4</h2>
-                    <p>Content article 4</p>
+                    <img src="./img/card.png">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque repellat non ad placeat adipisci eos voluptates sed atque inventore qui, optio reiciendis laborum voluptatum recusandae dolorum quisquam distinctio saepe enim!</p>
                 </article>
             </section>
 
