cambiando nombre a la clase skill-article por dev-article

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <section id="second-section" class="section">
                 <h1>Section 2</h1>
-                <article class="skill-article glow-circle glow-red">
+                <article class="dev-article glow-circle glow-red">
                     <img src="./img/java.png">
                     <p>Java</p>
                 </article>
