Agregando png de flechas a los botones de apertura y cierre del header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 <img src="./img/portada.png">
             </div>
 
-            <button id="open-page" class="open-page glow-circle glow-white">hola</button>
+            <button id="open-page" class="open-page glow-circle glow-white">
+                <img src="./img/double-arrow-up.png">
+            </button>
                 
         </div>
 
@@ -55,7 +57,9 @@
             </ul>
         </nav>
 
-        <button id="close-page" class="close-page glow-circle glow-white">hola</button>
+        <button id="close-page" class="close-page">
+            <img src="./img/double-arrow-down.png">
+        </button>
 
     </header>
 
