Agregando contenedores para los botones de apertura y cierre del header, aplicando estilos de los contenedores

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
                 <img src="./img/portada.png">
             </div>
 
-            <button id="open-page" class="open-page glow-circle glow-white">
-                <img src="./img/double-arrow-up.png">
-            </button>
+            <div class="trapecio-wrapper">
+                <button id="open-page" class="open-page">
+                    <img src="./img/double-arrow-up.png">
+                </button>
+            </div>
+
                 
         </div>
 
@@ -57,9 +60,11 @@
             </ul>
         </nav>
 
-        <button id="close-page" class="close-page">
-            <img src="./img/double-arrow-down.png">
-        </button>
+        <div class="trapecio-wrapper">
+            <button id="close-page" class="close-page">
+                <img src="./img/double-arrow-down.png">
+            </button>
+        </div>
 
     </header>
 
