Creando seccion de comentarios, todavía no almacena ningun comentario

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <li> <a href="#second-section">Option 2</a> </li>
                 <li> <a href="#thirth-section">Option 3</a> </li>
                 <li> <a href="#fourth-section">Option 4</a> </li>
+                <li> <a href="#comments-section">Comments</a> </li>
             </ul>
         </nav>
 
@@ -230,7 +231,24 @@
                         </a>
                     </div>
                 </article>
-            </section>            
+            </section>
+
+            <section id="comments-section" class="section">
+                <h1>Comments</h1>
+                <div class="comment-container">
+                    <h2>Add a comment</h2>
+                    <label>Nombre</label>
+                    <input type="text" id="nombre">
+                    <label>Ocupación</label>
+                    <input type="text" id="ocupacion">
+                    <textarea id="new-comment-main" class="new-comment"></textarea>
+                    <button id="btn-comment-main" class="custom-button light-button">Comentar</button>
+
+                    <div id="comments-main" class="comments">
+                        <!-- cargar comentarios -->
+                    </div>
+                </div>
+            </section>
         </div>
 
     </div>
