--- a/index.html
+++ b/index.html
@@ -235,14 +235,17 @@
 
             <section id="comments-section" class="section">
                 <h1>Comments</h1>
-                <div class="comment-container">
+                    <div class="comment-container">
                     <h2>Add a comment</h2>
-                    <label>Nombre</label>
-                    <input type="text" id="nombre">
-                    <label>Ocupación</label>
-                    <input type="text" id="ocupacion">
-                    <textarea id="new-comment-main" class="new-comment"></textarea>
-                    <button id="btn-comment-main" class="custom-button light-button">Comentar</button>
+
+                    <div class="form-comment">
+                        <label>Nombre</label>
+                        <input type="text" id="nombre">
+                        <label>Ocupación</label>
+                        <input type="text" id="ocupacion">
+                        <textarea id="new-comment-main" class="new-comment"></textarea>
+                        <button id="btn-comment-main" class="custom-button light-button">Comentar</button>
+                    </div>
 
                     <div id="comments-main" class="comments">
                         <!-- cargar comentarios -->
