--- a/index.html
+++ b/index.html
@@ -249,6 +249,19 @@
 
                     <div id="comments-main" class="comments">
                         <!-- cargar comentarios -->
+
+                        <div class='comment'>
+                            <img src="./img/generic-user.png">
+                            <div class="content">
+                                <div class='user-info'>
+                                    <p>Nombre: Nombre generico</p>
+                                    <p>Ocupacion: Usuario generico</p>
+                                    <p>1/1/2025</p>
+                                </div>
+                                <p class='text-comment'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto laudantium alias exercitationem asperiores velit quam nemo facere sint nobis, tempore obcaecati mollitia ex accusantium aspernatur distinctio maiores cupiditate? Quas, ea?</p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </section>
