--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js"></script>
     <script src="https://cdn.counter.dev/script.js" data-id="0fc0c2cd-15ff-4a20-9af8-517675cfaf17" data-utcoffset="-3"></script>
+
+    <!-- Supabase -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 
 <body id="body">
