Cargando comentarios a la pagina desde Supabase

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
                     <div id="comments-main" class="comments">
                         <!-- cargar comentarios -->
 
+                    <!-- ######################## estructura de un comentario #########################    
                         <div class='comment'>
                             <img src="./img/generic-user.png">
                             <div class="content">
@@ -264,6 +265,7 @@
                                 <p class='text-comment'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto laudantium alias exercitationem asperiores velit quam nemo facere sint nobis, tempore obcaecati mollitia ex accusantium aspernatur distinctio maiores cupiditate? Quas, ea?</p>
                             </div>
                         </div>
+                    -->
 
                     </div>
                 </div>
