--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <img src="./img/linkedin.png">
                 </a>
 
-                <a href="#" class="social-media-button light-button">
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=matias.bartoluche@gmail.com&su=Contacto%20desde%20mi%20sitio%20web%20Github" target="_blank" class="social-media-button light-button">
                     <img src="./img/gmail.png">
                 </a>
 
