Agregando link de contacto para el boton de LinkedIn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <div id="contact-buttons">
-                <a href="#" class="social-media-button light-button">
+                <a href="https://www.linkedin.com/in/mat%C3%ADas-bartoluche-433982161/" target="_blank" class="social-media-button light-button">
                     <img src="./img/linkedin.png">
                 </a>
 
