Agregando un curriculum de ejemplo para probar el boton de descarga de CV

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                 <a href="#" class="social-media-button light-button"> 
                     <img src="./img/github.png">
                 </a>
-                <button id="cv" class="custom-button">Descargar cv</button>
+
+                <a href="./docs/plantilla-curriculum-ejemplo.docx">
+                    <button id="cv" class="custom-button">Descargar cv</button>
+                </a>
+
             </div>
 
             <div id="image-header">
